--- a/public/styles.css
+++ b/public/styles.css
@@ -17,6 +17,80 @@ html {
   margin: 0 auto;
 }
 
+/* ME */
+
+.intro {
+  /* background-image: url(./img/me.jpg); */
+  /* background: linear-gradient(
+    54deg,
+    rgba(74, 76, 179, 0.95) 34%,
+    hsla(0, 34%, 71%, 0.95)
+  ); */
+  background-image: linear-gradient(
+      54deg,
+      rgba(74, 76, 179, 0.95) 34%,
+      hsla(0, 34%, 71%, 0.95)
+    ),
+    url(img/blackmetal.jpeg);
+  background-color: #6d56c1;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
+  padding-top: 90px;
+  color: #fff;
+  font-family: Roboto Mono, monospace;
+}
+
+.intro img {
+  width: 90%;
+  border-radius: 5px;
+  box-shadow: 0 0 27px rgba(96, 96, 96, 0.34);
+  position: relative;
+  top: 40px;
+}
+
+.intro .content {
+  /* position: relative;
+  top: 40px; */
+  line-height: 25px;
+  font-size: 100%;
+}
+
+.intro .name {
+  font-size: 200%;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.intro .work {
+  margin-bottom: 40px;
+}
+
+.intro dl {
+  font-size: 80%;
+}
+
+.intro .contacts {
+  margin-bottom: 40px;
+}
+
+.intro .contacts dt {
+  opacity: 0.4;
+  float: left;
+  text-transform: uppercase;
+}
+
+.intro .contacts dd {
+  margin-bottom: 15px;
+  padding-left: 150px;
+}
+
+.intro .social a {
+  margin-right: 15px;
+  opacity: 0.4;
+  color: #fff !important;
+}
+
 /* HEADER */
 
 header {
